force-app/main/default/objects/Bank_Config__mdt/Bank_Config__mdt.object-meta.xml
<CustomObject>
    <label>Bank Config</label>
    <pluralLabel>Bank Configs</pluralLabel>
</CustomObject>