force-app/main/default/objects/Bank_Config__mdt/fields/Core_Banking_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Core_Banking_Api_Key__c</fullName>
    <label>Core Banking Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>