force-app/main/default/objects/Bank_Config__mdt/fields/Core_Banking_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Core_Banking_Endpoint__c</fullName>
    <label>Core Banking Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>