force-app/main/default/objects/Bank_Config__mdt/fields/Overdraft_Buffer__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Buffer__c</fullName>
    <label>Overdraft Buffer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>